--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-scrollbars-custom": "^4.1.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
